@@ -1,3 +1,7 @@
+2008-09-05	Jannis Pohlmann <jannis@xfce.org>
+
+	* autogen.sh: Add git svn revision versioning support.
+
 2008-05-26	Benedikt Meurer <benny@xfce.org>
 
 	* doc/, terminal/, THANKS: Apply patch from Mikel Ward
